src/Apttus Quote/Proposal-Configuration Integration/objects/ProposalSummaryGroup__c.object
<CustomObject>
    <description>Represents a summary of line items associated with a quote or proposal</description>
    <fields>
        <fullName>AdHocGroupDescription__c</fullName>
        <description>The ad hoc group description</description>
        <label>Ad Hoc Group Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BaseExtendedPrice__c</fullName>
        <description>The rolled up base extended price of products and options that belong to the group</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <description>The charge type  associated with the group</description>
        <label>Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>License Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Proposal Summary Groups</relationshipLabel>
        <relationshipName>ProposalSummaryGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The group description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtendedListPrice__c</fullName>
        <description>The rolled up extended list price of products that belong to the group</description>
        <inlineHelpText>The rolled up extended list price of products that belong to the group</inlineHelpText>
        <label>Extended List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtendedPrice__c</fullName>
        <description>The rolled up extended price of products that belong to the group</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>The frequency associated with the recurring or usage price</description>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupAdjustmentPercent__c</fullName>
        <description>The group adjustment percent</description>
        <label>Group Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GroupType__c</fullName>
        <description>The group type</description>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Category</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ItemSequence__c</fullName>
        <description>The sequence of items belonging to a group</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Category Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subtotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NetAdjustmentPercent__c</fullName>
        <description>The net adjustment percent</description>
        <label>Net Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NetPrice__c</fullName>
        <description>The net price for the group is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OptionPrice__c</fullName>
        <description>The rolled up adjusted price of options that belong to the group</description>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceAdjustment__c</fullName>
        <description>The rolled up price adjustment of products that belong to the group</description>
        <label>Price Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposalId__c</fullName>
        <description>ID of the associated quote/proposal</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Summary Groups</relationshipLabel>
        <relationshipName>ProposalSummaryGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Proposal Summary Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Summary Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>